# MAD

./: .gitignore  CMakeLists.txt  build.sh  record.sh  run.sh  test.sh
documentation/: ai_harness.md  architecture.md  game_design.md  implementation_status.md
include/core/: coords_dump.hpp  engine.hpp  log.hpp  recorder.hpp  scenario.hpp  serialize.hpp  test.hpp  world.hpp
include/game/: flow_field.hpp  flow_field_manager.hpp  game_map.hpp  global_flow_field.hpp  grid.hpp  grid_types.hpp  pathfinding.hpp  sector.hpp  wall.hpp
include/network/: socket.hpp
include/rendering/: camera.hpp  renderer.hpp  window.hpp
scenarios/: border_walls.mad  border_walls.note.html  demo_3p.mad  maze_3p.mad  spiral.mad  spiral.note.html
src/: main.cpp
src/core/: coords_dump.cpp  engine.cpp  log.cpp  recorder.cpp  scenario.cpp  serialize.cpp  world.cpp
src/game/: flow_field.cpp  flow_field_manager.cpp  game_map.cpp  global_flow_field.cpp  grid.cpp  pathfinding.cpp  sector.cpp  wall.cpp
src/network/: socket.cpp
src/rendering/: renderer.cpp  window.cpp
tests/: test_camera.cpp  test_grid.cpp  test_main.cpp  test_pathfinding.cpp  test_sector.cpp  test_wall.cpp  test_world.cpp
tools/: capture.py  coords_page.py  spiral_trace.py
